--- a/package.json
+++ b/package.json
@@ -1,5 +1,40 @@
 {
+  "name": "mesto",
+  "description": "[![pages-build-deployment](https://github.com/Rybakov-Ilay/mesto/actions/workflows/pages/pages-build-deployment/badge.svg)](https://github.com/Rybakov-Ilay/mesto/actions/workflows/pages/pages-build-deployment)",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack --mode production",
+    "dev": "webpack serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Rybakov-Ilay/mesto.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Rybakov-Ilay/mesto/issues"
+  },
+  "homepage": "https://github.com/Rybakov-Ilay/mesto#readme",
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "autoprefixer": "^10.4.6",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.1",
+    "cssnano": "^5.1.7",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "postcss-loader": "^6.2.1",
+    "prettier": "^2.5.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
+  },
+  "dependencies": {
+    "core-js": "^3.22.3"
   }
 }
